src/styles/blocks/blog.css
.blog-page {
  padding: 30px 0;
}

.blog-page__post-list {
  display: grid;
  padding: 40px 60px;
  min-height: 1000px;
  grid-auto-flow: row;
  grid-template-columns: 100%;
  grid-auto-rows: max-content;
  justify-content: center;
  background-color: var(--bg-section);
  transition: var(--theme-color-transition);
  transition-property: background-color;
  margin: 30px 7vw;
}

.blog-page article {
  margin: 0 auto;
  margin-top: -118px;
  transition: transform 0.47s ease-out, margin 0.28s ease-out;
  position: relative;
  animation-duration: 0.5s;
  animation-fill-mode: both;
  animation-timing-function: ease-in-out;
  animation-name: cardFolding;
}

@keyframes cardFolding {
  0% {
    margin-top: -195px;
  }

  100% {
    margin-top: -118px;
  }
}

.blog-page article:first-of-type {
  margin-top: 0;
  animation: none;
}

.blog-page article:hover {
  z-index: 10;
  transform: scale(1.03);
  margin-bottom: 140px;
}

.blog-page__post-element {
  display: grid;
  grid-template-rows: 1fr auto auto;
  grid-template-columns: 100%;
  width: clamp(480px, 30vw, 520px);
  grid-row-gap: 20px;
  border-radius: 10px;
  box-shadow: var(--box-shadow-blog-card);
  color: var(--color-text-primary);
  text-decoration: none;
  background-color: var(--bg-blog-card);
  transition: var(--theme-color-transition);
  transition-property: background-color;
  padding: 35px 45px;
}

.blog-page h2 {
  font-size: 20px;
  font-weight: 600;
  opacity: 0.9;
  letter-spacing: -0.08px;
  line-height: 1.2;
  color: var(--color-text-primary);
}

article:first-of-type .blog-page__post-element {
  box-shadow: 0 -7px 11px -6px var(--box-shadow-card-color);
}

article .blog-page__post-element:focus {
  box-shadow: 0 0 0 2px var(--color-text-secondary);
  outline: none;
}

article .blog-page__post-element:hover {
  box-shadow: var(--box-shadow-blog-card-hover);
}

article .blog-page__post-element:hover h2 {
  opacity: 1;
}

article .blog-page__post-element:active {
  box-shadow: var(--box-shadow-blog-card-active);
  transform: translateY(1px);
}

.blog-page p {
  font-size: 17px;
  font-weight: 400;
  line-height: 1.4;
  letter-spacing: -0.12px;
  color: var(--color-text-secondary);
}

.blog-page span {
  font-weight: 500;
  font-size: 13px;
  margin-right: 8px;
  color: var(--color-text-secondary);
}

.blog-page .tag {
  padding: 3px 8px;
  border-radius: 8px;
  color: white;
  background-color: var(--color-red);
}

@media (max-width: 768px) {
  .blog-page__post-element {
    width: unset;
    max-width: 500px;
    grid-row-gap: 12px;
    min-width: 200px;
    box-shadow: var(--box-shadow-card-mobile);
    padding: 28px;
  }

  .blog-page__post-list {
    padding: 30px 4vw;
    min-height: unset;
    margin: 10px 0;
    grid-template-columns: 1fr;
  }

  .blog-page article {
    transform: none;
    margin-top: unset;
    margin-bottom: 12px;
    animation: none;
  }

  article:first-of-type .blog-page__post-element {
    box-shadow: var(--box-shadow-card-mobile);
  }

  article:last-of-type .blog-page__post-element {
    box-shadow: var(--box-shadow-card-mobile);
  }

  .blog-page article:last-of-type {
    margin-bottom: 0;
  }

  .blog-page article:hover {
    scale: unset;
    transform: unset;
    padding: unset;
    margin-bottom: 10px;
  }

  .blog-page h2 {
    font-size: 19px;
    opacity: 1;
  }

  .blog-page p {
    font-size: 17px;
  }

  .blog-page__post-element:hover {
    box-shadow: 0 1px 4px var(--box-shadow-color-blog-card);
    transform: translateY(1px);
  }

  .blog-page span {
    font-size: 12px;
  }
}

@media (min-height: 1200px) {
  .blog-page__post-list {
    min-height: 80vh;
  }
}

